--- a/rm-app/package.json
+++ b/rm-app/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
