--- a/rm-app/package.json
+++ b/rm-app/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.2",
     "rm-app": "file:",
     "toastify-js": "^1.12.0"
   },
